--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -47,6 +47,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:navGraph="@navigation/mobile_navigation_drawer_admin"
             android:layout_above="@id/bottom_nav_view"
             android:layout_below="@+id/toolbarContainer"
             app:defaultNavHost="true" />
