--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/bottom_nav_view"
+            app:navGraph="@navigation/mobile_navigation_drawer"
             android:layout_below="@+id/toolbarContainer"
             app:defaultNavHost="true" />
 
