--- a/app/src/main/res/layout/activity_transport_company_admin.xml
+++ b/app/src/main/res/layout/activity_transport_company_admin.xml
@@ -26,7 +26,6 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@drawable/background_toolbar"
                 android:elevation="8dp"
-                app:menu="@menu/toolbar_menu"
                 app:navigationIcon="@drawable/ic_toolbar_nav"
                 app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
                 app:subtitleTextColor="#FFFFFF"
@@ -46,6 +45,7 @@
             android:id="@+id/drawer_nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
+            app:navGraph="@navigation/mobile_navigation_drawer_transport_admin"
             android:layout_height="match_parent"
             android:layout_above="@id/bottom_nav_view"
             android:layout_below="@+id/toolbarContainer"
