--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabIndicatorHeight="3dp"
-        app:tabMode="scrollable"
+        app:tabMode="fixed"
         app:tabSelectedTextColor="@color/textColor"
         app:tabTextAppearance="@style/TabTextAppearance"
         app:tabTextColor="#99121212" />
