--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
+        android:textColor="#FFFFFF"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
         android:textSize="16sp" />
@@ -36,6 +37,7 @@
         android:id="@+id/headerUserEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:fontFamily="@font/lato"
         android:text="@string/nav_header_subtitle"
         android:textSize="14sp" />
