--- a/app/src/main/res/layout/nav_header_transport_main.xml
+++ b/app/src/main/res/layout/nav_header_transport_main.xml
@@ -30,7 +30,7 @@
         android:fontFamily="@font/lato_bold"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="company_name"
-        android:textColor="@color/textColor"
+        android:textColor="#FFFFFF"
         android:textSize="16sp" />
 
     <TextView
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
         android:text="company_email"
-        android:textColor="@color/textColor"
+        android:textColor="#FFFFFF"
         android:textSize="14sp" />
 
     <TextView
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
         android:text="company_contact_number"
-        android:textColor="@color/textColor"
+        android:textColor="#FFFFFF"
         android:textSize="14sp" />
 
     <TextView
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
         android:text="company_address"
-        android:textColor="@color/textColor"
+        android:textColor="#FFFFFF"
         android:textSize="14sp" />
 
     <LinearLayout
@@ -101,6 +101,15 @@
                 android:text="user_email"
                 android:textColor="@color/textColor"
                 android:textSize="14sp" />
+            <TextView
+                android:id="@+id/headerUserAccountType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:text="user_account_type"
+                android:textColor="@color/textColor"
+                android:textSize="14sp" />
+
         </LinearLayout>
 
     </LinearLayout>
