--- a/app/src/main/res/drawable/background_body.xml
+++ b/app/src/main/res/drawable/background_body.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="#FFFFFF"
-        android:startColor="#FFFFFF" />
+        android:endColor="#EEEEEE"
+        android:startColor="#EEEEEE" />
 </shape>
