--- a/app/src/main/res/layout/fragment_active_booking.xml
+++ b/app/src/main/res/layout/fragment_active_booking.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_body"
     android:weightSum="20"
     android:orientation="vertical"
     tools:context=".ui.fragments.user.booking.ActiveBookingFragment">
@@ -94,7 +95,7 @@
                 android:layout_height="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="5"
-                android:background="#1F000000" />
+                android:background="#80FFFFFF" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -106,14 +107,14 @@
                 android:text="Pending"
                 android:textAlignment="center"
                 android:textSize="16sp"
-                android:textColor="@color/textColor" />
+                android:textColor="#FFFFFF" />
 
             <LinearLayout
                 android:layout_width="75dp"
                 android:layout_height="2dp"
                 android:layout_gravity="center"
                 android:layout_weight="5"
-                android:background="#1F000000" />
+                android:background="#80FFFFFF" />
         </LinearLayout>
 
     <RelativeLayout
@@ -126,7 +127,7 @@
             android:layout_centerInParent="true"
             android:fontFamily="@font/lato"
             android:text="No pending bookings (yet)."
-            android:textColor="@color/textColor"
+            android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:visibility="visible" />
 
