--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -23,9 +23,9 @@
             android:title="@string/title_booking" />
 
         <item
-            android:id="@+id/nav_van_companies"
+            android:id="@+id/nav_partners"
             android:icon="@drawable/ic_input_transport"
-            android:title="@string/title_van_companies" />
+            android:title="@string/title_partners" />
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_menu_contact"
