--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_body"
     android:fitsSystemWindows="true"
-    tools:context=".admin.AdminActivity"
+    tools:context=".ui.admin.AdminActivity"
     tools:openDrawer="start">
 
     <RelativeLayout
